# BaCa2

./: .dockerignore  .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  README.rst  baca2cli.sh  docker-compose.yml  entrypoint.sh  game_plan.md  initdb.sql  local.env  migrate.sh  package-lock.json  package.json  postgres_db.dockerfile  pyproject.toml  requirements.txt  web_app.dockerfile
.github/workflows/: documentation.yaml
BaCa2/: gunicorn_config.py  manage.py  scratch.py  usos_config.yaml
BaCa2/BaCa2/: asgi.py  auth_backend.py  choices.py  db_creator.py  db_settings.py  exceptions.py  ext_databases.py  routing.py  settings.py  tools.py  urls.py  wsgi.py
BaCa2/BaCa2/apps_configurations/: dbbackup.py
BaCa2/broker_api/: __init__.py  apps.py  broker_communication.py  communicate.py  mock.py  models.py  scheduler.py  tests.py  urls.py  views.py
BaCa2/config/: baca2db_2022_10_27_22_24_05.sql
BaCa2/core/: auth_backend.py  choices.py  exceptions.py  settings.py  uj_oidc_auth.py  urls.py
BaCa2/course/: __init__.py  admin.py  apps.py  manager.py  models.py  routing.py  tests.py  urls.py  views.py
BaCa2/fixtures/: admin.json
BaCa2/main/: admin.py  apps.py  models.py  scheduler.py  tests.py  urls.py  views.py
BaCa2/package/: apps.py  models.py  package_manage.py  tests.py  validators.py
BaCa2/polls/: admin.py  models.py  urls.py  views.py
BaCa2/submits/: 1234.cpp
BaCa2/templates/: admin.html  announcement_edit.html  base.html  course.html  course_admin.html  course_edit_round.html  course_role.html  course_submit_summary.html  course_task.html  course_task_admin.html  courses.html  dashboard.html  development_info.html  development_timeline.html  login.html  password_reset.html  profile.html  task_edit.html  test.html  testlist.html
BaCa2/util/: context_processors.py  models.py  models_registry.py  other.py  responses.py  views.py
BaCa2/widgets/: attachment.py  base.py  brief_result_summary.py  code_block.py  colors.py  forms.py  listing.py  navigation.py  notification.py  popups.py  querying.py  sidenav.py  text_display.py
k8s/apache2/: deployment.yaml
k8s/postgres_db/: deployment.yaml  secret.yaml
k8s/web_app/: deployment.yaml
lib/usosapi-python/: README.md  setup.py  usosapi.py
(+337 files in other folders)
