[tool.poetry]
name = "baca2"
version = "0.1.2-pre"
description = "Bachelor project: automated programming task checking and scoring system BaCa2"
authors = ["BaCa2 Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.0"
psycopg2-binary = "^2.9.5"
django-extensions = "^3.2.1"
django-dbbackup = "^4.0.2"
pyyaml = "^6.0"
sphinx = "^7.2.6"
baca2-package-manager = "0.2.16"
urllib3 = "^2.0.0"
django-widget-tweaks = "^1.4.12"
gunicorn = "^21.2.0"
python-dotenv = "^1.0.0"
django-cors-headers = "^4.3.1"
usosapi = { path = "lib/usosapi-python" }
apscheduler = "^3.10.4"
coverage = "^7.3.2"
sphinx-rtd-theme = "^2.0.0"
parameterized = "^0.9.0"
requests = "^2.31.0"
mozilla-django-oidc = "^4.0.0"

colorlog = "^6.8.2"
django-split-settings = "^1.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
